@@ -3570,7 +3570,8 @@ Same as \fB\-G, \-\-gpus\fR
 
 .TP
 \fBSLURM_GPUS_PER_NODE\fR
-Same as \fB\-\-gpus\-per\-node\fR
+Same as \fB\-\-gpus\-per\-node\fR except within an existing allocation, in which
+case it will be ignored if \fB\-\-gpus\fR is specified.
 .IP
 
 .TP
