@@ -79,6 +79,8 @@ documents those changes that are of interest to users and administrators.
       'GET /slurm/v0.0.42/reconfigure'
  -- Fix how used cpus are tracked in a job allocation to allow the max number of
     concurrent steps to run at a time if threads per core is greater than 1.
+ -- In existing allocations SLURM_GPUS_PER_NODE environment variable will be
+    ignored by srun if --gpus is specified.
 
 * Changes in Slurm 24.05.3
 ==========================
